2000-01-29  Cyrille Chepelov <chepelov@calixo.net>

	* objects/chronogram/chronoline_event.c: removed references to
	lround(). Please don't insist, I'm already red of shame.
	
2000-01-29  Alexander Larsson  <alla@lysator.liu.se>

	* app/render_libart.[ch]:
	* app/Makefile.am:
	Non-finished libart renderer.

	* acconfig.h:
	Added HAVE_LIBART flag

	* configure.in:
	Added libart probe

	* app/app_procs.c:
	Call gdk_rbg_init().

	* app/connectionpoint_ops.c:
	* app/disp_callbacks.c:
	* app/grid.c:
	* app/handle_ops.c:
	* app/magnify.c:
	* app/modify_tool.c:
	Change ddisp->renderer type from RendererGdk * to Renderer *
	Draw zoom and select rects in ddisp->canvas->window instead
	of ddisp->renderer->renderer->pixmap.

	* app/display.[ch]:
	Add aa_renderer to DDisplay, and  support for it.
	New function ddisplay_set_renderer() for changing renderer.
	Add ddisplay_transform_coords_double() function, used by aa renderer.
	Change ddisp->renderer type from RendererGdk * to Renderer *

	* app/menus.c:
	Add antialias to menu.
	
	* app/commands.[ch]:
	add view_aa_callback function
	Change ddisp->renderer type from RendererGdk * to Renderer *

	* lib/geometry.[ch]:
	Added IntRectangle and int_rectangle_union.

2000-01-28  James Henstridge  <james@daa.com.au>

	* app/commands.h: removed prototypes.

	* app/commands.c: removed the functions that have been moved to
	filedlg.c.

	* app/filedlg.h: added new prototypes.

	* app/filedlg.c (file_open_callback): move open dialog to this
	file.  This implementation should remember the current directory
	between file loads.
	(file_save_as_callback): moved this dialog as well.
	(file_save_callback): moved this function here.

	* app/paginate_psprint.c (paginate_psprint): if not in fit to mode,
	align page boundaries to the origin.

	* app/diagram.c (diagram_update_extents): redraw the diagram if the
	scaling factor changes while updating the extents.  This is so the
	page breaks get redrawn correctly.
